# video_captions

./: .gitignore  IMPLEMENTATION_SUMMARY.md  QUICKSTART.md  README.md  SIMPLE_START.md  pyproject.toml  requirements.txt  run_local.py  start_app.bat  start_app.sh
app/: __init__.py  main.py
app/api/v1/: router.py
app/api/v1/endpoints/: health.py  videos.py
app/core/: config.py  exceptions.py  logging.py
app/middleware/: error_handler.py  logging.py
app/models/: __init__.py
app/schemas/: __init__.py
app/services/: orchestrator.py  storage.py  task_manager.py  transcription.py  video_processor.py
frontend/: README.md  package-lock.json  package.json
frontend/src/: App.jsx  index.css
frontend/src/api/: client.js
frontend/src/components/: DownloadStep.jsx  EditStep.jsx  ProcessingStep.jsx  ReprocessingStep.jsx  StylingStep.jsx  UploadStep.jsx
frontend/src/store/: captionStore.js
