[project]
name = "video-captions"
version = "0.1.0"
description = "API to add captions to your videos effortlessly"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "aiofiles==23.2.1",
    "boto3==1.34.14",
    "celery==5.3.6",
    "fastapi==0.109.0",
    "ffmpeg-python==0.2.0",
    "httpx==0.26.0",
    "openai-whisper==20231117",
    "prometheus-client==0.19.0",
    "pydantic==2.5.3",
    "pydantic-settings==2.1.0",
    "python-dotenv==1.0.0",
    "python-multipart==0.0.6",
    "redis==5.0.1",
    "structlog==24.1.0",
    "tenacity==8.2.3",
    "uvicorn[standard]==0.27.0",
]
